--- a/clarity/settings/Devnet.toml
+++ b/clarity/settings/Devnet.toml
@@ -72,7 +72,7 @@ balance = 100_000_000_000_000
 # btc_address: mjSrB3wS4xab3kYqFktwBzfTdPg367ZJ2d
 
 [devnet]
-disable_bitcoin_explorer = true
+# disable_bitcoin_explorer = true
 # disable_stacks_explorer = true
 # disable_stacks_api = true
 # working_dir = "tmp/devnet"
@@ -92,7 +92,7 @@ disable_bitcoin_explorer = true
 # stacks_api_events_port = 3700
 # bitcoin_explorer_port = 8001
 # stacks_explorer_port = 8000
-# postgres_port = 5432
+postgres_port = 5433
 # postgres_username = "postgres"
 # postgres_password = "postgres"
 # postgres_database = "postgres"
