--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "buffer": "^6.0.3",
+    "dialog-polyfill": "^0.5.6",
     "process": "^0.11.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
